--- a/capstone_v2/templates/base-dog-detail.html
+++ b/capstone_v2/templates/base-dog-detail.html
@@ -11,7 +11,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Inter:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../static/css/adopt.css">
     <link rel="stylesheet" href="../static/css/main.css">
+    <link rel="stylesheet" href="../static/css/carousel.css">
+
 </head>
     <body>
         <header>
@@ -44,9 +47,11 @@
         <footer>
             <h3>On Floof &copy;</h3>
         </footer>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="https://unpkg.com/@petfinder/petfinder-js/dist/petfinder.min.js"></script>
         <script src="/../static/javascript/dogDetail.js/"></script>
+        <script src="/../static/javascript/carousel.js/"></script>
     </body>
 </html>
