--- a/capstone_v2/templates/post.html
+++ b/capstone_v2/templates/post.html
@@ -31,6 +31,13 @@
             <p>[[ currentPost.body ]]</p>
         </div>
         
+        <!-- <div class="comment-section">
+            <button @click="commentMode = true">Comment</button>
+            <div v-if="commentMode = true">
+                <input type="text" value="comment" v-model="comment">
+                <button @click="postComment">Submit</button>
+            </div>
+        </div> -->
     </div>
 </div>
     
