--- a/capstone_v2/templates/adopt.html
+++ b/capstone_v2/templates/adopt.html
@@ -5,18 +5,18 @@
 <link rel="stylesheet" href="../static/css/adopt.css">
 
 <div id="adopt">
-    <div class="adopt-header">
+    <!-- <div class="adopt-header"> -->
         <!-- <div class="header-img-container"> -->
-            <img src="../static/images/main-wide.jpg/" alt="Two huskies hiking in the Rocky mountains in Colorado" class="adopt-img">
+            <!-- <img src="../static/images/main-wide.jpg/" alt="Two huskies hiking in the Rocky mountains in Colorado" class="adopt-img"> -->
         <!-- </div> -->
-        <div class="adopt-header-text">
+        <!-- <div class="adopt-header-text">
             <h2>Discover your adventure dog!</h2>
             <p>Create written description here of what the adoption tool does and how to use it + why someone should use it</p>
             <p>This header could go well next to a puppy picture of Jay</p>
             <p>at the top of the page</p>
             <p>OR have no pictures at all and just have the adoption tool it may be easier to use that way</p>
         </div>
-    </div>
+    </div> -->
 
     <div class="adopt-container">
         <div class="search-container">
