--- a/capstone_v2/templates/hike.html
+++ b/capstone_v2/templates/hike.html
@@ -7,15 +7,16 @@
         <img src="../static/images/main-wide.jpg/" alt="Two huskies hiking in the Rocky mountains in Colorado">
         <div class="image-message">
             <h2>Hiking</h2>
+            <p></p>
             <div class="subject-nav">
-                <div>
-                    <a href="{% url 'hike' %}">Hiking</a>
-                </div>
                 <div>
                     <a href="{% url 'bike' %}">Cycling</a>
                 </div>
                 <div>
                     <a href="{% url 'mush' %}">Mushing</a>
+                </div>
+                <div>
+                    <a href="{% url 'home' %}">All Posts</a>
                 </div>
             </div>
         </div>
