--- a/capstone_v2/templates/mush.html
+++ b/capstone_v2/templates/mush.html
@@ -15,7 +15,7 @@
                     <a href="{% url 'bike' %}">Cycling</a>
                 </div>
                 <div>
-                    <a href="{% url 'mush' %}">Mushing</a>
+                    <a href="{% url 'home' %}">All Posts</a>
                 </div>
             </div>
         </div>
@@ -26,7 +26,7 @@
             <h2>Recent Mushing Posts</h2>
         </div>
         <div v-for="post in mushList">
-            <a href="`/${post.id}/`" class="post-preview">
+            <a :href="`../${post.id}/`" class="post-preview">
                 <img :src="[[ post.previewImage ]]" alt="preview image for a blog post">
                 <div class="preview-text-container">
                     <h3>[[ post.title ]]</h3>
