--- a/capstone_v2/static/css/main.css
+++ b/capstone_v2/static/css/main.css
@@ -5,10 +5,6 @@ html {
     box-sizing: inherit;
 }
 
-main {
-    margin-top: .75em;
-} 
-
 body {
     display: flex;
     flex-flow: column nowrap;
@@ -26,7 +22,7 @@ header {
     flex-flow: column nowrap;
     padding: 0em;
     width: 100%;
-    background-color: #212120;
+    background-color: #21212000;
 }
 
 .main {
@@ -158,6 +154,15 @@ details {
         padding: 0em;
     }
     
+    header.scrolled {
+        background-color: #212120;
+        transition: background-color 200ms linear;
+    }
+
+    header.scrolled .nav a {
+        color: rgba(216, 223, 227, 0.51)
+    }
+    
     .mobile-nav {
         display: none;
     }
@@ -167,13 +172,13 @@ details {
     }
     
     .nav a {
-        color: rgba(216, 223, 227, 0.51);
+        color: rgb(54, 57, 58);
         font-size: 1.5em;
         text-decoration: none;
     }
     
-    .nav div a:hover {
-        color: rgb(250, 250, 250) .105em;
+    .nav a:hover {
+        color: rgb(250, 250, 250);
         transition: all ease-in-out 500ms;
     }
     /* this is NOT WORKING, WHY??? */
@@ -190,7 +195,7 @@ details {
 
     .title {
         width: fit-content;
-        padding: .5em 0em .5em 1.65em;
+        padding: .5em 0em .5em 1.25em;
         margin: 0em;
         /* font-size: 1.15em; */
         font-size: .75em;
@@ -234,10 +239,6 @@ details {
         font-size: 1em;
     }
 
-    .header-main-container {
-        margin: 2em 0em 0em 0em;
-    }
-
     .post-preview {
         display: flex;
         flex-flow: row nowrap;
@@ -263,8 +264,10 @@ details {
 
     .image-message {
         position: absolute;
-        top: 3.5em;
-        left: 3.5em;
+        color:#3c3633d6;
+        top: 5em;
+        left: 5em;
+        text-align: center;
     }
 
     .image-message h2 {
@@ -280,21 +283,24 @@ details {
 
    .subject-nav div {
     padding: .25em;
-    border-radius: .5em;
+    /* border-radius: .5em;
     border: solid rgba(223, 159, 81, 0.818) .105em;
-    background-color: rgba(223, 159, 81, 0.581);
+    background-color: rgba(223, 159, 81, 0.581); */
    }
 
-   .subject-nav div:hover {
-    border: solid rgba(245, 233, 218, 0.818) .105em;
-    background-color: rgba(223, 178, 124, 0.581);
+   .subject-nav div a:hover {
+    /* border: solid rgba(245, 233, 218, 0.818) .105em;
+    background-color: rgba(223, 178, 124, 0.581); */
     transition: all ease-in-out 500ms;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
-   }
+    color: #1f2224d6;
+    text-decoration-color: #b68642;
+    text-shadow: .035em 0 #21212045, 0 .035em #2121203b, .035em 0 #2121202f, 0 .035em #2121203e;
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2); */
+    }
 
    .subject-nav div a {
-    color:#212120;
-    text-decoration: none;
+    color: #33373cd6;
+    text-decoration-color: #655f56d6;
    }
 
    .main-container {
