--- a/capstone_v2/templates/base-white.html
+++ b/capstone_v2/templates/base-white.html
@@ -69,8 +69,18 @@
         <footer>
             <h3>On Floof &copy;</h3>
         </footer>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
         <script src="{% static 'javascript/app.js' %}"></script>
+
+        <script>
+            $(function () {
+                $(document).scroll(function () {
+                  var $navs = $("header");
+                  $navs.toggleClass('scrolled', $(this).scrollTop() > $navs.height());
+                });
+              });
+        </script>
     </body>
 </html>
